[gd_scene load_steps=10 format=3 uid="uid://d1mr1jwoop6vc"]

[ext_resource type="Script" uid="uid://d13keqcgktvc4" path="res://scenes/enemies/lava_ant.gd" id="1_1ih35"]
[ext_resource type="Texture2D" uid="uid://b81ffq8me01cd" path="res://assets/Lava_Ant.png" id="2_pu7h8"]
[ext_resource type="Texture2D" uid="uid://d1fwd3fbx5r6m" path="res://PlaceholderAssets/Explosion/explosion00.png" id="3_jkuyd"]
[ext_resource type="Texture2D" uid="uid://km2ift1ystl0" path="res://PlaceholderAssets/Explosion/explosion01.png" id="4_ey3sv"]
[ext_resource type="Texture2D" uid="uid://d2qnxcrcwusfv" path="res://PlaceholderAssets/Explosion/explosion02.png" id="5_ba1pi"]
[ext_resource type="Texture2D" uid="uid://c7v66xxgb11qx" path="res://PlaceholderAssets/Explosion/explosion03.png" id="6_ckxfm"]

[sub_resource type="SpriteFrames" id="SpriteFrames_bm7qs"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_pu7h8")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_jkuyd")
}, {
"duration": 1.0,
"texture": ExtResource("4_ey3sv")
}, {
"duration": 1.0,
"texture": ExtResource("5_ba1pi")
}, {
"duration": 1.0,
"texture": ExtResource("6_ckxfm")
}],
"loop": false,
"name": &"explode",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1ih35"]
size = Vector2(104, 117)

[sub_resource type="CircleShape2D" id="CircleShape2D_54yyh"]
radius = 200.212

[node name="LavaAnt" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 13
script = ExtResource("1_1ih35")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_pu7h8")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_bm7qs")
animation = &"explode"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_1ih35")

[node name="AttackArea2D" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea2D"]
shape = SubResource("CircleShape2D_54yyh")

[node name="ExplodeTimer" type="Timer" parent="."]

[node name="HitTimer" type="Timer" parent="."]

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="AttackArea2D" to="." method="_on_attack_area_2d_body_entered"]
[connection signal="body_exited" from="AttackArea2D" to="." method="_on_attack_area_2d_body_exited"]
[connection signal="timeout" from="ExplodeTimer" to="." method="_on_explode_timer_timeout"]
[connection signal="timeout" from="HitTimer" to="." method="_on_hit_timer_timeout"]
